# rust-analyzer

./: Cargo.toml  LICENSE  README.md  foo.txt  main  results.json
src/: main  main.rs
