[package]
name = "rust-analyzer"
version = "0.1.0"
authors = ["siddhant-deepsource <siddhant@deepsource.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linecount = "0.1.0"
toml = "0.5.6"